# traffic-forwarder-a

./: .gitignore  Cargo.toml  Dockerfile  gulpfile.js  package-lock.json  tsconfig.json
.github/workflows/: release.yml
Typescript/: HtmlGraph.ts  HtmlMain.ts  HtmlServices.ts  HtmlStaticElement.ts  HtmlStatusBar.ts  HtmlTunnelTraffic.ts  Utils.ts  contracts.d.ts  main.ts
Typescript/typings/: jquery.d.ts
src/: main.rs  settings_model.rs
src/app/: app_ctx.rs
src/background/: mod.rs  one_second_timer.rs
src/http/: build_controllers.rs  mod.rs  startup.rs
src/http/controllers/: mod.rs
src/http/controllers/home_controller/: index_action.rs
src/statistics/: mod.rs  statistics.rs  target_connections.rs  traffic_history.rs  value_accumulator.rs
src/target_tcp_listener/: mod.rs  target_tcp_callbacks.rs  target_tcp_connection.rs  target_tcp_listener.rs  target_tcp_listener_connections.rs
src/tcp_listener/: mod.rs  tcp_connection.rs  tcp_listener.rs  tcp_listener_connections.rs
src/tcp_tunnel/: mod.rs  tcp_tunnel.rs  tcp_tunnel_connection_signle_threaded.rs  tcp_tunnel_inner.rs  tunnel_connection_for_core_purposes.rs  tunnel_connection_to_send_payload.rs  tunnel_tcp_connection.rs  tunnel_tcp_events.rs
wwwroot/css/: site.css
wwwroot/js/: HtmlGraph.js  HtmlGraph.js.map  HtmlMain.js  HtmlMain.js.map  HtmlServices.js  HtmlServices.js.map  HtmlStaticElement.js  HtmlStaticElement.js.map  HtmlStatusBar.js  HtmlStatusBar.js.map  HtmlTunnelTraffic.js  HtmlTunnelTraffic.js.map  Utils.js  Utils.js.map  app.js  jquery.js  main.js  main.js.map
(+6 files in other folders)
